# KaldiDroidDemo

./: README.md  build.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/rayworks/sample/kaldidroiddemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Timer.cpp
app/src/main/cpp/base/: version.h
app/src/main/cpp/include/: timer.h
app/src/main/cpp/matrix/: compressed-matrix.h
app/src/main/java/com/rayworks/sample/kaldidroiddemo/: MainActivity.kt
app/src/main/java/com/rayworks/sample/kaldidroiddemo/kaldi/: KaldiWrapper.java
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/rayworks/sample/kaldidroiddemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
